[bdist_wheel]

[metadata]
name=vault-api
version=1.0.0
description=Interacting with vault over hvac
long_description = Vault Higher Level API written over hvac
keywords=vault, hashicorp, credentials, secret
license=GPL v3 - Opensource License
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
url=https://github.com/jkdihenkar/vault_learning
author=JayD
author_email=jkdihenkar@gmail.com

[aliases]
test=nosetests

[nosetests]
verbosity=3
detailed-errors=1
with-coverage=1
with-xunit=1
cover-package=vault_api